<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="366dp"
        android:layout_height="394dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_scrollMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_corner_green"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_req"
                    android:layout_width="287dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/txt_req"
                    android:textColor="#000dff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_req"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more_info" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_corner_blue"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_dss"
                    android:layout_width="287dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/txt_dss"
                    android:textColor="#000dff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_dss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more_info" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_corner_green"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_dh"
                    android:layout_width="287dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/txt_dh"
                    android:textColor="#000dff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_dh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more_info" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_corner_blue"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_pp"
                    android:layout_width="287dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/txt_pp"
                    android:textColor="#000dff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_pp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more_info" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_corner_green"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_ps"
                    android:layout_width="287dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/txt_ps"
                    android:textColor="#000dff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_ps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more_info" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>