<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginTop="42dp"
    android:layout_marginEnd="8dp"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".fragments.Vista3Fragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewInfo25"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/holo_green_light"
                android:gravity="center"
                android:text="Para entregar"
                android:textColor="#000dff"
                tools:layout_editor_absoluteX="163dp"
                tools:layout_editor_absoluteY="68dp" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/sv_main"
            android:layout_width="match_parent"
            android:layout_height="233dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_scrollMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_req"
                        android:layout_width="287dp"
                        android:layout_height="wrap_content"
                        android:text="Carta asignación servicio
social. "
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_ca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ver mas" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_dss"
                        android:layout_width="287dp"
                        android:layout_height="wrap_content"
                        android:text="Carta compromiso servicio
social."
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_cc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ver mas" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_pp"
                        android:layout_width="287dp"
                        android:layout_height="wrap_content"
                        android:text="Solicitud de servicio social."
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_ss"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ver mas" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_dh"
                        android:layout_width="287dp"
                        android:layout_height="wrap_content"
                        android:text="Tarjeta de control de
servicio social. "
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_tc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ver mas" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>