<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
 <item
     android:id="@+id/nav_1"
     android:icon="@drawable/ic_filter_1_black_24dp"
     android:title="1"/>

    <item
        android:id="@+id/nav_2"
        android:icon="@drawable/ic_filter_1_black_24dp"
        android:title="2"/>
    <item
        android:id="@+id/nav_3"
        android:icon="@drawable/ic_filter_1_black_24dp"
        android:title="3"/>
</menu>